<resources>
    <string name="app_name">MalcolmApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="welcome_fragment_label">Welcome!</string>
    <string name="season_list_fragment_label">Season List</string>
    <string name="random_episode_fragment_label">Your random episode is:</string>
    <string name="random_episode_button">Roll a random episode</string>
    <string name="season_list_button">View season list</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Welcome!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="season_number_label">Season</string>
    <string name="episode_number_label">Episode</string>
    <string name="episode_title_label">Title:</string>
    <string name="episode_description_label">Summary</string>
</resources>