<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/WelcomeFragment">

    <fragment
        android:id="@+id/WelcomeFragment"
        android:name="com.malcolmapp.WelcomeFragment"
        android:label="@string/welcome_fragment_label"
        tools:layout="@layout/fragment_welcome">

        <action
            android:id="@+id/action_WelcomeFragment_to_SeasonListFragment"
            app:destination="@id/SeasonListFragment" />
        <action
            android:id="@+id/action_WelcomeFragment_to_EpisodeSelectorFragment"
            app:destination="@id/EpisodeSelectorFragment" />
    </fragment>
    <fragment
        android:id="@+id/SeasonListFragment"
        android:name="com.malcolmapp.SeasonListFragment"
        android:label="@string/season_list_fragment_label"
        tools:layout="@layout/fragment_season_list">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/WelcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/EpisodeSelectorFragment"
        android:name="com.malcolmapp.EpisodeSelectorFragment"
        android:label="@string/random_episode_fragment_label"
        tools:layout="@layout/fragment_episode_selector" />
</navigation>